# P01_SO

./: Cargo.toml  data.txt  data2.txt  data2.txt.sorted  jobs_journal.json  readme.md  test_basic.sh  test_endpoints.sh  test_server.sh  test_stress.sh
src/: control.rs  errors.rs  handlers.rs  lib.rs  main.rs  router.rs  state.rs
