[package]
name    = "Proyecto_1"
version = "0.1.0"
edition = "2024"

[dependencies]
# Para fechas y permitir serialización con serde
chrono = { version = "0.4", features = ["serde"] }

# Para serializar structs a JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

urlencoding = "2"

#random y hash
rand = "0.8"
sha2 = "0.10"